--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,1 +1,16 @@
-Branch = Branch with given id does not exist
+Branch_not_found = Branch with given id does not exist
+Can_not_create_category = There is category with this name
+Category_not_found = There is no category with this name
+Income_not_Found = There is no income in selected period of time
+Can_not_create_product = There is product with this name
+Product_not_found = There is no product with this id
+Products_not_found_by_category_id = There is no product with this category id
+Products_not_found = There is no products
+Insufficient_products = Insufficient quantity of products in this branch
+Selling_failure = There is no product with this id in this branch or requested quantity of product.
+No_products_in_branches = There is no products with this id in branches.
+Return_failure = You have not accessed to return product with this id or required quantity bigger than sold quantity
+Sign_in = Branch signed-in successfully!
+Branch_name_error = Branch name is already taken!
+Branch_address_error = Address name is already taken!
+Branch_signup = Branch registered successfully
