--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -1,1 +1,17 @@
-Branch = файл не найден
+Branch_not_found = Магазин с таким номером не найден
+Can_not_create_category = Уже существует категория с таким именем
+Category_not_found = Не существует категории с таким именем
+Income_not_Found = Нету дохода в в этом периоде времени
+Can_not_create_product = Уже существует продукт с таким именем
+Product_not_found = Не существует продукта с таким номером
+Products_not_found_by_category_id = Нету продуктов с этим номером категории
+Products_not_found = Не существует продуктов
+Insufficient_products = Недостаточное количество продуктов в этом магазине
+Selling_failure = В этом магазине нет продукта с этим номером или количество не соответствует запросу
+No_products_in_branches = Нет продукта с этим номером в сети
+Return_failure = У вас нет доступа для возврата этого товара или запрашиваемое \
+  количество не соответствует количеству проданного товара.
+Sign_in = Вход успешно выполнен!
+Branch_name_error = Магазин с таким именем уже существует
+Branch_address_error = Магазин с таким адресом уже существует
+Branch_signup = Магазин успешно зарегистрирован
